workloads/authentik/ingress.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: authentik
  namespace: default
spec:
  parentRefs:
    - name: shared-gateway
      namespace: default
      sectionName: auth-john2143-https
  hostnames:
    - auth.john2143.com
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: authentik-server
          port: 80
